add verify for static classes and fix bugs