@@ -6,10 +6,7 @@ import ru.nsu.fit.dymock.matchers.Stick;
 import java.lang.reflect.Method;
 
 import java.lang.reflect.Array;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Arrays;
+import java.util.*;
 
 public class Interceptor<T> {
     private final Map<String, MethodInterceptionInfo> mapping = new HashMap<>();
@@ -28,10 +25,10 @@ public class Interceptor<T> {
         String name = invokedMethod.getName();
         MethodInterceptionInfo interceptionInfo = mapping.get(name);
         if (interceptionInfo != null) {
+            interceptionInfo.incrementMethodCallCount();
             Stick stick = mapping.get(name).getSuitableStick(arguments);
             if (stick != null) {
                 interceptionInfo.incrementLocalStick(stick);
-                stick.incrementCountCalls();
                 return stick.getResult();
             }
         }
@@ -54,12 +51,12 @@ public class Interceptor<T> {
         String name = stick.getMethodName();
         MethodInterceptionInfo info = mapping.get(name);
         if (info == null)
-            info = mapping.put(name, new MethodInterceptionInfo(new ArrayList<>(Arrays.asList(stick))));
+            mapping.put(name, new MethodInterceptionInfo(new ArrayList<>(List.of(stick))));
         else
             info.addStick(stick);
     }
     public int getLocalCountCalls(Stick stick) {
-        return mapping.get(stick.getMethodName()).getCallCount(stick);
+        return mapping.get(stick.getMethodName()).getLocalCallCount(stick);
     }
     public int getMethodCountCalls(String methodName) {
         return mapping.get(methodName).getMethodCallCount();
